# cre

./: .env.example  .gitignore  README.md  app.py  convert.py  cookie_crawl.py  core.py  crawl.py  crawlgmail.py  crawlmurena.py  crawlyahoo.py  database.py  imap.py  log.sh  lx.py  main.py  mx.py  outlook_imap.py  proton.py  pyproject.toml  run.sh  submit_emails_api.py  submit_imap_task_api.py  template_routes.py  token_crawl.py  utils.py
ai/: CLAUDE_README.md  README.md  claude_client.py  prompt.json
ai/templates/: cookie_downloader_gmail.py  cookie_downloader_murena.py  cookie_downloader_yahoo.py  email_downloader_gmx.com_template.py  email_downloader_rambler.ru_template.py  email_downloader_yahoo.com_template.py  email_downloader_zohomail.com_template.py  web_downloader_outlook.py
api/: proton.py
cookie/: cookie_crawl.py  crawlgmail.py  crawlmurena.py  crawlyahoo.py  outlook.py  proton.py  token_crawl.py
migration/: 01-add_logs.sql  02-template.sql
templates/: base.html  batch_create_task.html  create_task.html  index.html  login.html  logs.html  templates.html
token/: token_crawl.py
web/: login.py  login_outlook.py  touch.py
