[project]
name = "crawl-email"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dnspython>=2.7.0",
    "flask>=3.1.1",
    "google-adk>=1.15.1",
    "gunicorn>=23.0.0",
    "imapclient>=3.0.1",
    "pycryptodome>=3.23.0",
    "python-dotenv>=1.1.1",
    "python-gnupg>=0.5.4",
    "requests>=2.32.4",
    "selenium>=4.34.2",
]
